--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -15,13 +15,16 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-header h1 {
+  font-size: calc(10px + 2vmin);
 }
 
 .App-link {
@@ -32,6 +35,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
